Refactor Filtering internal predicates from guava to java.